IVYPORTAL-7208: Enhance process List - Navigation - Fixed text overflow bug in compact process widget

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -2285,6 +2285,10 @@ a.case-details-document-add-link {
   right: 27px;
 }
 
+.compact-process-widget .process-start-list-item {
+  padding-right: 40px;
+}
+
 .process-start-list-item-action.is-express {
   right: 50px;
 }
